--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.HealthCare">
-        <activity android:name=".EditDoctor"></activity>
+        <activity android:name=".AvailableTime"></activity>
+        <activity android:name=".EditDoctor" />
         <activity android:name=".DoctorAccount" />
         <activity android:name=".MainActivity">
             <intent-filter>
