--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,20 +9,33 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.HealthCare">
-        <activity android:name=".SignUp"></activity>
-        <activity android:name=".PharmacyNearMe"></activity>
-        <activity android:name=".PastPrescription"></activity>
-        <activity android:name=".UpdatePrescriptionInfo"></activity>
-        <activity android:name=".SendPrescription"></activity>
-        <activity android:name=".AvailableTime" />
-        <activity android:name=".EditDoctor" />
-        <activity android:name=".DoctorAccount" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".SignUp">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".PharmacyNearMe">
+
+
+        </activity>
+        <activity android:name=".PastPrescription">
+
+
+        </activity>
+        <activity android:name=".UpdatePrescriptionInfo">
+
+
+        </activity>
+        <activity android:name=".SendPrescription">
+
+        </activity>
+        <activity android:name=".AvailableTime" />
+        <activity android:name=".EditDoctor" />
+        <activity android:name=".DoctorAccount" />
+        <activity android:name=".MainActivity">
+
         </activity>
 
         <meta-data
