--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.HealthCare">
+        <activity android:name=".login"></activity>
         <activity android:name=".Intial_layout"></activity>
         <activity android:name=".home" />
         <activity android:name=".AppointmentList" />
