--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.HealthCare">
-        <activity android:name=".UploadPrescription"></activity>
+        <activity android:name=".AddPresInfo"></activity>
+        <activity android:name=".UploadPrescription" />
         <activity android:name=".home" />
         <activity android:name=".AppointmentList" />
         <activity android:name=".DoctorSignUp" />
