--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.HealthCare">
-
-        <activity android:name=".PatientSignUp"></activity>
-        <activity android:name=".PresOrderOverView"></activity>
+        <activity android:name=".EditDoctor"></activity>
+        <activity android:name=".PatientSignUp" />
+        <activity android:name=".PresOrderOverView" />
         <activity android:name=".PharmacyList" />
         <activity android:name=".AddPresInfo" />
         <activity android:name=".UploadPrescription" />
@@ -22,10 +22,8 @@
         <activity android:name=".DoctorSignUp" />
         <activity android:name=".AvailableTimeList" />
         <activity android:name=".AvailableTime" />
-        <activity android:name=".EditDoctor" />
         <activity android:name=".DoctorAccount" />
         <activity android:name=".intropage" />
-        <activity android:name=".MainActivity" />
         <activity android:name=".signUpUi" />
         <activity android:name=".login">
             <intent-filter>
