Patient profile created

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,17 +11,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.HealthCare">
-
-        <activity android:name=".ChannelList"></activity>
+        <activity android:name=".PatientProfile"></activity>
+        <activity android:name=".ChannelList" />
         <activity android:name=".EditDoctor" />
-
-
-        <activity android:name=".Myprescription"></activity>
-
-        <activity android:name=".EditDoctor"></activity>
-
+        <activity android:name=".Myprescription" />
+        <activity android:name=".EditDoctor" />
         <activity android:name=".PatientSignUp" />
-
         <activity android:name=".PresOrderOverView" />
         <activity android:name=".PharmacyList" />
         <activity android:name=".AddPresInfo" />
