create Appointment Recycler Adapter

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HealthCare">
 
-        <activity android:name=".ChannelList"></activity>
-        <activity android:name=".EditDoctor" />
+        <activity android:name=".ChannelList">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-
-        <activity android:name=".Myprescription"></activity>
-
-        <activity android:name=".EditDoctor"></activity>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <activity android:name=".PatientSignUp" />
 
@@ -34,12 +34,9 @@
         <activity android:name=".DoctorAccount" />
         <activity android:name=".intropage" />
         <activity android:name=".signUpUi" />
+        <activity android:name=".EditDoctor"/>
         <activity android:name=".login">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <meta-data
