--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HealthCare">
 
-
+        <activity android:name=".ExUserprofile"></activity>
         <activity android:name=".ChannelList">
 
         </activity>
