--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,9 @@
         android:theme="@style/Theme.HealthCare">
 
 
-        <activity android:name=".ChannelList">
-
-        </activity>
-
 
         <activity android:name=".PatientProfile"></activity>
         <activity android:name=".ChannelList" />
-        <activity android:name=".EditDoctor" />
         <activity android:name=".Myprescription" />
         <activity android:name=".EditDoctor" />
 
@@ -29,7 +24,13 @@
         <activity android:name=".PharmacyList" />
         <activity android:name=".AddPresInfo" />
         <activity android:name=".UploadPrescription" />
-        <activity android:name=".home" />
+        <activity android:name=".home" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".AppointmentList" />
         <activity android:name=".DoctorSignUp" />
         <activity android:name=".AvailableTimeList" />
@@ -37,13 +38,8 @@
         <activity android:name=".DoctorAccount" />
         <activity android:name=".intropage" />
         <activity android:name=".signUpUi" />
-        <activity android:name=".EditDoctor"/>
         <activity android:name=".login">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <meta-data
