--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,13 +5,13 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.HealthCare">
-        <activity android:name=".UploadPrescription"></activity>
+        android:theme="@style/Theme.HealthCare"
+        android:allowBackup="false">
+        <activity android:name=".UploadPrescription" />
         <activity android:name=".home" />
         <activity android:name=".AppointmentList" />
         <activity android:name=".DoctorSignUp" />
@@ -21,11 +21,13 @@
         <activity android:name=".DoctorAccount" />
         <activity android:name=".intropage" />
         <activity android:name=".MainActivity" />
+        <activity android:name=".SelectDoctorAppointment" />
+        <activity android:name=".AppointmentCreate" />
+        <activity android:name=".PatientViewAppointments" />
         <activity android:name=".signUpUi" />
         <activity android:name=".login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
